# AutoLFS

./: .gitignore  Agent  CONTRIBUTING.md  README.md  SECURITY.md  feedback_system.sh
Current Objective/implementation/: .gitignore  README.md  pyproject.toml  pytest.ini  run_tests.py  setup.py
Current Objective/implementation/backup/: archive_manager.sh  backup_manager.sh  backup_verify.sh  restore_manager.sh
Current Objective/implementation/blfs/: blfs_wrapper.sh  build_scheduler.sh  checkpoint_manager.sh  config_manager.sh  dependency_resolver.sh  maintenance_manager.sh  package_analyzer.sh  package_manager.sh  package_selector.sh  post_install_tester.sh  validation_manager.sh
Current Objective/implementation/config/: build.conf.template  config_backup.sh  config_validator.sh  config_version.sh  schema_validator.sh  system.conf  user.conf.template
Current Objective/implementation/gaming/: gaming_manager.sh  graphics_optimizer.sh  library_manager.sh  steam_manager.sh
Current Objective/implementation/lfs/: lfs_wrapper.sh
Current Objective/implementation/lfs_wrapper/: benchmark_manager.py  blfs_analyzer.py  blfs_manager.py  build_manager.py  build_scheduler.py  checkpoint_manager.py  cli.py  dependency_resolver.py  exceptions.py  gaming_support.py  integration_test_framework.py  lfs_core.py  platform_testing.py  qa_framework.py  script_manager.py  validation_manager.py
Current Objective/implementation/lfs_wrapper/config/: __init__.py
Current Objective/implementation/lib/: core_functions.sh
Current Objective/implementation/maintenance/: cleanup.sh  health_check.sh  log_rotation.sh  space_manager.sh
Current Objective/implementation/monitoring/: alert_manager.sh  monitor_daemon.sh  performance_monitor.sh  progress_tracker.sh
Current Objective/implementation/qa/: qa_framework.sh  run_test_suite.sh  security_validator.sh  test_environment.sh
Current Objective/implementation/qa_framework/: __init__.py  adapters.py  framework.py  metrics.py  orchestrator.py  test_suite.py
Current Objective/implementation/test-reports/: report.html  test_summary.yaml
Current Objective/implementation/tests/: test_benchmark_manager.py  test_blfs_analyzer.py  test_blfs_manager.py  test_build_manager.py  test_build_scheduler.py  test_checkpoint_manager.py  test_cli.py  test_dependency_resolver.py  test_lfs_wrapper.py  test_platform_testing.py  test_script_manager.py  test_validation_manager.py
Current Objective/implementation/validation/: compatibility_tester.sh  dependency_checker.sh  env_validator.sh  resource_verifier.sh
(+384 files in other folders)
